--- a/app/style.css
+++ b/app/style.css
@@ -63,3 +63,14 @@ body {
 .dropdown-item:hover {
   background-color: #f1f1f1;
 }
+
+.chatbot{
+  position: absolute;
+  width: 50px;
+  height: 50px;
+  z-index: 100000;
+  bottom: 0%;
+  right: 5%;
+  background-color: blcak;
+  border-radius: 50%;
+}
